k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: taskmanager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: saikiranasamwar4/taskmanager-backend:latest
        ports:
        - containerPort: 8888
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: taskmanager
spec:
  selector:
    app: backend
  ports:
  - port: 8888
    targetPort: 8888
  type: ClusterIP
